--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,23 @@
-language: python
-python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"      # current default Python on Travis CI
-  - "3.7"
-  - "3.8"
-  - "3.9"
-  - "3.9-dev"  # 3.9 development branch
-  - "nightly"  # nightly build
-# command to install dependencies
-install:
-  - pip install -r requirements.txt
-# command to run tests
-script:
- - python -m unittest Assignments.voltage.test_voltage_data_full.py
+{
+  "language": "python",
+  "os": [
+    "windows"
+  ],
+  "python": [
+    "2.7",
+    "3.4",
+    "3.5",
+    "3.6",
+    "3.7",
+    "3.8",
+    "3.9",
+    "3.9-dev",
+    "nightly"
+  ],
+  "install": [
+    "pip install -r requirements.txt"
+  ],
+  "script": [
+    "python -m unittest Assignments.voltage.test_voltage_data_full.py"
+  ]
+}
