--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,7 @@
 {
   "language": "python",
-  "os": [
-    "windows"
-  ],
-  "python": [
-    "2.7",
-    "3.4",
-    "3.5",
-    "3.6",
-    "3.7",
-    "3.8",
-    "3.9",
-    "3.9-dev",
-    "nightly"
-  ],
+  "os": linux,
+  "dist": focal,
   "install": [
     "pip install -r requirements.txt"
   ],
